POPS-13 - Fix: missing declaration for variables

--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -25,4 +25,4 @@ jobs:
       run: |
         cd ./project-iam
         terraform init
-        terraform plan
+        terraform plan -var-file=frankfurt.tfvars
