--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -5,7 +5,7 @@ name: Terraform APPLY
 # Controls when the action will run. Triggers the workflow on pull request
 # events but only for the master branch
 on:
-  merge:
+  push:
     branches: [ master ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
