--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -27,6 +27,7 @@ jobs:
         terraform init
         terraform plan -var-file=frankfurt.tfvars
 
+    # Should be commented out on first deployment
     - name: Run terraform PLAN for project-core
       run: |
         cd ./project-core
