--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -5,8 +5,12 @@ name: Terraform APPLY
 # Controls when the action will run. Triggers the workflow on pull request
 # events but only for the master branch
 on:
-  push:
-    branches: [ master ]
+    workflow_dispatch:
+        input:
+            project_name:
+                description: 'Project on which to APPLY changes.'
+                required: true
+                default: 'project-iam'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -20,9 +24,9 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
-    # Runs a `terraform apply` command for project-iam using the runners shell
-    - name: Run terraform APPLY for project-iam
+    # Runs a `terraform apply` command for project-* using the runners shell
+    - name: Run terraform APPLY for ${{ github.event.inputs.project_name }}
       run: |
-        cd ./project-iam
+        cd ./${{ github.event.inputs.project_name }}
         terraform init
         terraform apply -var-file=frankfurt.tfvars -auto-approve
