--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -35,8 +35,8 @@ jobs:
         terraform plan -var-file=frankfurt.tfvars
 
     # Should be commented out on first and second deployment
-    - name: Run terraform PLAN for project-apps
+    - name: Run terraform PLAN for project-apps-dev
       run: |
-        cd ./project-apps
+        cd ./project-apps-dev
         terraform init
         terraform plan -var-file=frankfurt.tfvars
