--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -2,8 +2,4 @@ FROM nginx:latest
 
 RUN mkdir -p /etc/ssl
 ADD ./ssl/ /etc/
-ADD ./sites-available /etc/nginx/
-
-RUN rm -f /etc/nginx/sites-enabled/*
-
-RUN ln -s /etc/nginx/sites-available/default /etc/nginx/sites-enabled/default
+ADD ./conf.d/* /etc/nginx/conf.d/
