--- a/.github/workflows/nginx_deploy_aws.yml
+++ b/.github/workflows/nginx_deploy_aws.yml
@@ -25,11 +25,10 @@
 
 on:
   workflow_dispatch:
-    # inputs:
-    #   project_name:
-    #     description: 'Project on which to APPLY changes.'
-    #     required: true
-    #     default: 'project-iam'
+    inputs:
+      home:
+        description: 'location'
+        required: false
   
   name: Deploy to Amazon ECS
   
