--- a/.github/workflows/nginx_deploy_aws.yml
+++ b/.github/workflows/nginx_deploy_aws.yml
@@ -73,7 +73,7 @@ jobs:
       id: task-def
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
-        task-definition: task-definition.json
+        task-definition: ./nginx/nginx_task_definition.json
         container-name: nginx
         image: ${{ steps.build-image.outputs.image }}
 
