--- a/nginx/nginx_task_definition.json
+++ b/nginx/nginx_task_definition.json
@@ -1,20 +1,22 @@
-[
-    {
-        "name": "nginx",
-        "image": "nginx:latest",
-        "cpu": 10,
-        "memory": 512,
-        "portMappings": [
-            {
-                "containerPort": 80,
-                "hostPort": 80,
-                "protocol": "tcp"
-            },
-            {
-                "containerPort": 443,
-                "hostPort": 443,
-                "protocol": "tcp"
-            }
-        ]
-    }
-]
+{
+    "containerDefinitions": [
+        {
+            "name": "",
+            "image": "",
+            "cpu": 10,
+            "memory": 512,
+            "portMappings": [
+                {
+                    "containerPort": 80,
+                    "hostPort": 80,
+                    "protocol": "tcp"
+                },
+                {
+                    "containerPort": 443,
+                    "hostPort": 443,
+                    "protocol": "tcp"
+                }
+            ]
+        }
+    ]
+}
