--- a/nginx/nginx_task_definition.json
+++ b/nginx/nginx_task_definition.json
@@ -1,7 +1,7 @@
 {
     "containerDefinitions": [
         {
-            "name": "",
+            "name": "nginx",
             "image": "",
             "cpu": 10,
             "memory": 512,
