POPS-26 - New way of deploying service

--- a/.github/workflows/nginx_deploy_aws.yml
+++ b/.github/workflows/nginx_deploy_aws.yml
@@ -87,4 +87,5 @@ jobs:
 
     - name: Update service
       run: |
+        cat ./nginx/nginx_task_definition.json
         aws ecs update-service --service nginx --task-definition ./nginx/nginx_task_definition.json --force-new-deployment
