POPS-26 - New way of deploying service

--- a/.github/workflows/nginx_deploy_aws.yml
+++ b/.github/workflows/nginx_deploy_aws.yml
@@ -77,15 +77,14 @@ jobs:
         container-name: nginx
         image: ${{ steps.build-image.outputs.image }}
 
-    # - name: Deploy Amazon ECS task definition
-    #   uses: aws-actions/amazon-ecs-deploy-task-definition@v1
-    #   with:
-    #     task-definition: ${{ steps.task-def.outputs.task-definition }}
-    #     service: nginx
-    #     cluster: ProgrammersOnly
-    #     wait-for-service-stability: true
+    - name: Deploy Amazon ECS task definition
+      uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+      with:
+        task-definition: ${{ steps.task-def.outputs.task-definition }}
+        service: nginx
+        cluster: ProgrammersOnly
+        wait-for-service-stability: false
 
     - name: Update service
       run: |
-        cat ./nginx/nginx_task_definition.json
-        aws ecs update-service --service nginx --task-definition ./nginx/nginx_task_definition.json --force-new-deployment
+        aws ecs update-service --service nginx --force-new-deployment
