--- a/.github/workflows/nginx_deploy_aws.yml
+++ b/.github/workflows/nginx_deploy_aws.yml
@@ -87,4 +87,7 @@ jobs:
 
     - name: Update service
       run: |
-        aws ecs update-service --cluster ProgrammersOnly --service nginx --force-new-deployment
+        aws ecs update-service --cluster ProgrammersOnly --service nginx --desired-count 0
+        PID=$!
+        wait $PID
+        aws ecs update-service --cluster ProgrammersOnly --service nginx --desired-count 1 --force-new-deployment
