POPS-26 - New way of deploying service

--- a/.github/workflows/nginx_deploy_aws.yml
+++ b/.github/workflows/nginx_deploy_aws.yml
@@ -88,6 +88,5 @@ jobs:
     - name: Update service
       run: |
         aws ecs update-service --cluster ProgrammersOnly --service nginx --desired-count 0
-        PID=$!
-        wait $PID
+        sleep 10s
         aws ecs update-service --cluster ProgrammersOnly --service nginx --desired-count 1 --force-new-deployment
