POPS-26 - New way of deploying service

--- a/.github/workflows/nginx_deploy_aws.yml
+++ b/.github/workflows/nginx_deploy_aws.yml
@@ -86,4 +86,18 @@ jobs:
         wait-for-service-stability: false
 
     - name: Stop current task
-      run: ./nginx/stop_nginx_task.sh
+      run: |
+        #!/bin/bash
+        tasks=`aws ecs list-tasks --cluster ProgrammersOnly | jq '.taskArns'`
+
+        for task in $tasks; do
+            name=""
+            if [ ${#task} -gt 1 ]; then
+                task=`echo $task | tr -d '\"'`
+                name=`aws ecs describe-tasks --cluster ProgrammersOnly --tasks $task | jq '.tasks' | jq '.[0].overrides.containerOverrides' | jq '.[0].name' | tr -d '\"'`
+                if [[ $name == "nginx" ]]; then
+                    echo $name
+                    aws ecs stop-task --cluster ProgrammersOnly --task $task
+                fi
+            fi
+        done
