POPS-26 - New way of deploying service - DONE

--- a/.github/workflows/nginx_deploy_aws.yml
+++ b/.github/workflows/nginx_deploy_aws.yml
@@ -85,6 +85,7 @@ jobs:
         cluster: ProgrammersOnly
         wait-for-service-stability: false
 
+    #TODO can be deleted once we will use Application Load Balancers and dynamic ports
     - name: Stop current task
       run: |
         #!/bin/bash
