--- a/.github/workflows/nginx_deploy_aws.yml
+++ b/.github/workflows/nginx_deploy_aws.yml
@@ -35,7 +35,7 @@ on:
 jobs:
   deploy:
     name: Deploy
-    runs-on: self-hosted  #TODO To be changed after creating deployment user
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout
@@ -44,8 +44,8 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        #aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        #aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: eu-central-1
 
     - name: Login to Amazon ECR
@@ -66,8 +66,6 @@ jobs:
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
-        #TODO to be deleted after creating deployment user
-        docker rmi $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
     - name: Fill in the new image ID in the Amazon ECS task definition
       id: task-def
