--- a/nginx/nginx_task_definition.json
+++ b/nginx/nginx_task_definition.json
@@ -6,19 +6,7 @@
             "name": "nginx",
             "image": "",
             "cpu": 10,
-            "memory": 128,
-            "portMappings": [
-                {
-                    "containerPort": 80,
-                    "hostPort": 80,
-                    "protocol": "tcp"
-                },
-                {
-                    "containerPort": 443,
-                    "hostPort": 443,
-                    "protocol": "tcp"
-                }
-            ]
+            "memory": 128
         }
     ]
 }
