--- a/nginx/nginx_task_definition.json
+++ b/nginx/nginx_task_definition.json
@@ -1,12 +1,23 @@
 {
     "family": "nginx",
-    "networkMode": "awsvpc",
     "containerDefinitions": [
         {
             "name": "nginx",
             "image": "",
             "cpu": 10,
-            "memory": 128
+            "memory": 128,
+            "portMappings": [
+                {
+                    "containerPort": 80,
+                    "hostPort": 80,
+                    "protocol": "tcp"
+                },
+                {
+                    "containerPort": 443,
+                    "hostPort": 443,
+                    "protocol": "tcp"
+                }
+            ]
         }
     ]
 }
