POPS-35 - Add proper certs

--- a/nginx/conf.d/frontend.conf
+++ b/nginx/conf.d/frontend.conf
@@ -1,9 +1,9 @@
 server {
     listen 443;
     ssl on;
-    ssl_certificate /etc/ssl/cert.crt;
-    ssl_certificate_key /etc/ssl/cert.key;
-    server_name programmers-only.code-bazar.com;
+    ssl_certificate /etc/ssl/www.programmers-only.com.crt;
+    ssl_certificate_key /etc/ssl/www.programmers-only.com.key;
+    server_name www.programmers-only.com;
     charset utf-8;
 
     access_log /var/log/nginx/nginx.programmers-only.access.log;
@@ -25,6 +25,6 @@ server {
 server {
     listen 80;
     listen [::]:80;
-    server_name programmers-only.code-bazar.com;
+    server_name www.programmers-only.com;
     return 301 https://$host$request_uri;
 }
