POPS-40 - fix www endpoint

--- a/nginx/conf.d/frontend.conf
+++ b/nginx/conf.d/frontend.conf
@@ -28,3 +28,34 @@ server {
     server_name programmers-only.com;
     return 301 https://$host$request_uri;
 }
+
+server {
+    listen 443;
+    ssl on;
+    ssl_certificate /etc/ssl/www.programmers-only.com.crt;
+    ssl_certificate_key /etc/ssl/www.programmers-only.com.key;
+    server_name www.programmers-only.com;
+    charset utf-8;
+
+    access_log /var/log/nginx/nginx.www.programmers-only.access.log;
+    error_log /var/log/nginx/nginx.www.programmers-only.error.log;
+
+    gzip on; # Enable gzip compression
+    gzip_comp_level 2;
+
+    location / {
+        proxy_pass http://52.58.100.247:3060;
+        proxy_redirect     off;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_read_timeout 24h;
+    }
+}
+
+server {
+    listen 80;
+    listen [::]:80;
+    server_name www.programmers-only.com;
+    return 301 https://$host$request_uri;
+}
