--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -10,19 +10,27 @@ on:
       project_name:
         description: 'Project on which to APPLY changes.'
         required: true
-        default: 'project-iam'
+        default: 'project-apps-dev'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "apply"
   apply:
     # The type of runner that the job will run on
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
+
+    # Set AWS credentials
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.TERRAFORM_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.TERRAFORM_SECRET_ACCESS_KEY }}
+        aws-region: eu-central-1
 
     # Runs a `terraform apply` command for project-* using the runners shell
     - name: Run terraform APPLY for ${{ github.event.inputs.project_name }}
