--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -13,12 +13,20 @@ jobs:
   # This workflow contains a single job called "plan"
   plan:
     # The type of runner that the job will run on
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
+
+    # Set AWS credentials
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.TERRAFORM_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.TERRAFORM_SECRET_ACCESS_KEY }}
+        aws-region: eu-central-1
 
     # Runs a `terraform plan` command for project-* using the runners shell
     - name: Run terraform PLAN for project-iam
