Run terraform plan before apply

--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -37,4 +37,5 @@ jobs:
       run: |
         cd ./${{ github.event.inputs.project_name }}
         terraform init
+        terraform plan -var-file=frankfurt.tfvars
         terraform apply -var-file=frankfurt.tfvars -auto-approve
