POPS-48 - Fix typos

--- a/.github/workflows/mongo_deploy_aws.yml
+++ b/.github/workflows/mongo_deploy_aws.yml
@@ -26,8 +26,12 @@
 name: Deploy to Amazon ECS
 
 on:
-  push:
-    branches: [ master ]
+  workflow_dispatch:
+    inputs:
+      project_name:
+        description: 'Dummy parameter.'
+        required: true
+        default: 'start-me'
   
 jobs:
   deploy:
