--- a/.github/workflows/sentinel.yml
+++ b/.github/workflows/sentinel.yml
@@ -9,7 +9,7 @@ on:
           description: 'description.'
           required: false
           default: 'dummy'
-          
+
 jobs:
   sentinel-test-aws:
     runs-on: ubuntu-latest
@@ -19,8 +19,7 @@ jobs:
         uses: actions/checkout@v2
       # This step runs `sentinel test` against the AWS policies
       - name: sentinel-test-aws
-        uses: rberlind/sentinel-policy-sets-for-tfc/.github/actions/run-sentinel@master
-        with:
-          args: ./aws
+        uses: hashicorp/sentinel-github-actions/test@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          STL_ACTION_WORKING_DIR: "./sentinel"
