--- a/.github/workflows/new-issue.yml
+++ b/.github/workflows/new-issue.yml
@@ -12,4 +12,4 @@ jobs:
         with:
           project: DevOps
           column: To do
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          repo-token: ${{ secrets.READ_PROJECTS_GITHUB_TOKEN }}
