--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -17,6 +17,12 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    env:
+      ARM_CLIENT_ID: ${{secrets.TERRAFORM_AZURE_SPN_ID}}
+      ARM_CLIENT_SECRET: ${{secrets.TERRAFORM_AZURE_SPN_SECRET}}
+      ARM_SUBSCRIPTION_ID: ${{secrets.TERRAFORM_AZURE_SUBSCRIPTION_ID}}
+      ARM_TENANT_ID: ${{secrets.TERRAFORM_AZURE_TENANT_ID}}
+
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
