--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -49,7 +49,8 @@ jobs:
       run: |
         cd ./project-core
         terraform init
-        terraform plan -var-file=frankfurt.tfvars
+        terraform plan -var 'account_number=${{ secrets.AWS_ACCOUNT_NUMBER }}' \
+                       -var-file=frankfurt.tfvars
 
     # Should be commented out on first and second deployment
     - name: Run terraform PLAN for project-apps-dev
