--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -44,7 +44,9 @@ jobs:
         cd ./${{ github.event.inputs.project_name }}
         terraform init
         terraform plan -var 'account_number=${{ secrets.AWS_ACCOUNT_NUMBER }}' \
+                       -var 'budget_slack_webhook_notification_service_uri=${{ secrets.SLACK_WEBHOOK }}' \
                        -var-file=frankfurt.tfvars
         terraform apply -var 'account_number=${{ secrets.AWS_ACCOUNT_NUMBER }}' \
+                        -var 'budget_slack_webhook_notification_service_uri=${{ secrets.SLACK_WEBHOOK }}' \
                         -var-file=frankfurt.tfvars \
                         -auto-approve
