--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -40,7 +40,7 @@ jobs:
 
     # Runs a `terraform apply` command for project-* using the runners shell
     - name: Run terraform APPLY for project-iam
-      if: ${{ github.event.inputs.project_name }} == 'project-iam'
+      if: github.event.inputs.project_name == 'project-iam'
       run: |
         cd ./project-iam
         terraform init
@@ -52,7 +52,7 @@ jobs:
 
     # Should be commented out on first deployment
     - name: Run terraform APPLY for project-core
-      if: ${{ github.event.inputs.project_name }} == 'project-core'
+      if: github.event.inputs.project_name == 'project-core'
       run: |
         cd ./project-core
         terraform init
@@ -66,7 +66,7 @@ jobs:
 
     # Should be commented out on first and second deployment
     - name: Run terraform APPLY for project-apps-dev
-      if: ${{ github.event.inputs.project_name }} == 'project-apps-dev'
+      if: github.event.inputs.project_name == 'project-apps-dev'
       run: |
         cd ./project-apps-dev
         terraform init
