--- a/.github/workflows/branch-naming-rules.yml
+++ b/.github/workflows/branch-naming-rules.yml
@@ -8,7 +8,7 @@ jobs:
       - uses: deepakputhraya/action-branch-name@master
         with:
           regex: '([a-z])+\/(#[0-9]*)+' # Regex the branch should match. This example enforces grouping
-          allowed_prefixes: 'feature,stable,fix' # All branches should start with the given prefix
+          allowed_prefixes: 'feature,refactor,fix' # All branches should start with the given prefix
           ignore: master,develop # Ignore exactly matching branch names from convention
           min_length: 5 # Min length of the branch name
           max_length: 25 # Max length of the branch name
