--- a/.github/workflows/aadb2c-deploy-policies.yml
+++ b/.github/workflows/aadb2c-deploy-policies.yml
@@ -8,4 +8,4 @@ jobs:
     steps:
     - name: Deploy AAD B2C custom policies
       shell: pwsh
-      run: ./aadb2c-auth-policies/Set-AADB2CCustomPolicies.ps1 -ClientID ${{secrets.AADB2C_POLICIES_DEPLOY_SPN_ID}} -ClientSecret ${{secrets.AADB2C_POLICIES_DEPLOY_SPN_SECRET}} -TenantId ${{secrets.AADB2C_TENANT_ID}}
+      run: . ./aadb2c-auth-policies/Set-AADB2CCustomPolicies.ps1 -ClientID ${{secrets.AADB2C_POLICIES_DEPLOY_SPN_ID}} -ClientSecret ${{secrets.AADB2C_POLICIES_DEPLOY_SPN_SECRET}} -TenantId ${{secrets.AADB2C_TENANT_ID}}
