--- a/.github/workflows/aadb2c-deploy-policies.yml
+++ b/.github/workflows/aadb2c-deploy-policies.yml
@@ -3,7 +3,7 @@ name: Deploy AAD B2C policies
 on: push
 
 jobs:
-  curl:
+  deployPolicies:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
